@@ -3,16 +3,20 @@ package com.hlt.usermanagement.services.impl;
 import com.hlt.auth.exception.handling.ErrorCode;
 import com.hlt.auth.exception.handling.HltCustomerException;
 import com.hlt.commonservice.enums.ERole;
+import com.hlt.usermanagement.dto.MailRequestDTO;
 import com.hlt.usermanagement.dto.UserBusinessRoleMappingDTO;
 import com.hlt.usermanagement.dto.UserDTO;
+import com.hlt.usermanagement.dto.enums.EmailType;
 import com.hlt.usermanagement.model.*;
 import com.hlt.usermanagement.populator.UserBusinessRoleMappingPopulator;
 import com.hlt.usermanagement.populator.UserPopulator;
 import com.hlt.usermanagement.repository.*;
+import com.hlt.usermanagement.services.EmailService;
 import com.hlt.usermanagement.services.UserBusinessRoleMappingService;
 import com.hlt.usermanagement.services.UserService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -34,7 +38,9 @@ public class UserBusinessRoleMappingServiceImpl implements UserBusinessRoleMappi
     private final B2BUnitRepository b2bRepository;
     private final RoleRepository roleRepository;
     private final UserBusinessRoleMappingPopulator populator;
-    private final UserPopulator userPopulator;
+    @Autowired
+    private EmailService emailService;
+
 
     @Override
     @Transactional
@@ -47,15 +53,50 @@ public class UserBusinessRoleMappingServiceImpl implements UserBusinessRoleMappi
         UserModel user = createUserFromDTO(dto.getUserDetails(), businessId);
         assignRolesToUser(user, ERole.ROLE_HOSPITAL_ADMIN);
         userRepository.save(user);
-
+        sendOnboardingEmail(user.getEmail(),user.getFullName(),user.getPassword(), ERole.ROLE_HOSPITAL_ADMIN);
         UserBusinessRoleMappingModel mapping = saveMapping(user, ERole.ROLE_HOSPITAL_ADMIN);
         return populateResponse(mapping);
     }
 
+    @Transactional
+    private void sendOnboardingEmail(String sendmail, String fullName,String password, ERole role) {
+        String subject = getSubjectForRole(role);
+
+        MailRequestDTO mail = MailRequestDTO.builder()
+                .to(sendmail)
+                .subject(subject)
+                .type(EmailType.PASSWORD_GENERATION)
+                .variables(Map.of(
+                        "name", fullName,
+                        "password", password
+                ))
+                .build();
+
+        emailService.sendMail(mail);
+    }
+
+
+    private String getSubjectForRole(ERole role) {
+        return switch (role) {
+            case ROLE_HOSPITAL_ADMIN -> "Welcome to Charaka - Hospital Admin Access";
+            case ROLE_DOCTOR -> "Welcome to Charaka - Doctor Access";
+            case ROLE_RECEPTIONIST -> "Welcome to Charaka - Receptionist Access";
+            case ROLE_TELECALLER -> "Welcome to Charaka - Telecaller Access";
+            default -> "Welcome to Charaka - Account Access";
+        };
+    }
+
+
+
     @Override
     @Transactional
     public UserBusinessRoleMappingDTO onboardDoctor(UserBusinessRoleMappingDTO dto) {
+        sendOnboardingEmail(dto.getUserDetails().getEmail(),
+                dto.getUserDetails().getFullName(),
+                dto.getUserDetails().getPassword(),
+                ERole.ROLE_DOCTOR);
         return onboardGenericRole(dto, ERole.ROLE_DOCTOR);
+
     }
 
     @Override
@@ -69,7 +110,10 @@ public class UserBusinessRoleMappingServiceImpl implements UserBusinessRoleMappi
         UserModel user = createUserWithoutBusiness(userDTO);
         assignRolesToUser(user, ERole.ROLE_TELECALLER);
         userRepository.save(user);
-
+        sendOnboardingEmail(dto.getUserDetails().getEmail(),
+                dto.getUserDetails().getFullName(),
+                dto.getUserDetails().getPassword(),
+                ERole.ROLE_TELECALLER);
         UserBusinessRoleMappingModel mapping = saveMapping(user, ERole.ROLE_TELECALLER);
         return populateResponse(mapping);
     }
@@ -77,6 +121,10 @@ public class UserBusinessRoleMappingServiceImpl implements UserBusinessRoleMappi
     @Override
     @Transactional
     public UserBusinessRoleMappingDTO onboardReceptionist(UserBusinessRoleMappingDTO dto) {
+        sendOnboardingEmail(dto.getUserDetails().getEmail(),
+                dto.getUserDetails().getFullName(),
+                dto.getUserDetails().getPassword(),
+                ERole.ROLE_RECEPTIONIST);
         return onboardGenericRole(dto, ERole.ROLE_RECEPTIONIST);
     }
 
@@ -156,7 +204,7 @@ public class UserBusinessRoleMappingServiceImpl implements UserBusinessRoleMappi
     private void assignRolesToUser(UserModel user, ERole role) {
         RoleModel roleModel = roleRepository.findByName(role)
                 .orElseThrow(() -> new HltCustomerException(ErrorCode.ROLE_NOT_FOUND));
-        user.setRoleModels(Set.of(roleModel));
+        user.setRoleModels(new HashSet<>(Collections.singleton(roleModel)));
     }
 
     private UserModel fetchOrCreateUser(UserBusinessRoleMappingDTO dto) {
